# zbx

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  demo.cast  docker-compose.yml  inventory.yaml  pyproject.toml  zbx.profiles.yaml.example
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  new_check.yml  question.yml
.github/scripts/: ai_maintainer.py  autonomous_agent.py  worker.py
.github/workflows/: ai-maintainer.yml  auto-merge.yml  autonomous.yml  publish.yml  tests.yml  worker.yml  zabbix-compat.yml  zbx-gitops.yml
configs/checks/: CONTRIBUTING.md
configs/checks/docker/: check.yaml
configs/checks/haproxy/: check.yaml
configs/checks/jvm-jolokia/: check.yaml
configs/checks/kubernetes-node/: check.yaml
configs/checks/mongodb/: check.yaml
configs/checks/nginx/: check.yaml
configs/checks/postgresql/: check.yaml
configs/checks/rabbitmq/: check.yaml
configs/checks/redis/: check.yaml
configs/checks/ssl-cert/: check.yaml
configs/checks/system-health/: check.yaml
configs/hosts/: zabbixtest3100.yaml
configs/s3-monitoring/: monitoring-s3-users.yaml
configs/templates/: aix-by-zabbix-agent.yaml  alcatel-timetra-timos-by-snmp.yaml  apache-activemq-by-jmx.yaml  apache-by-http.yaml  apache-by-zabbix-agent.yaml  apache-cassandra-by-jmx.yaml  apache-kafka-by-jmx.yaml  apache-tomcat-by-jmx.yaml  aranet-cloud.yaml  arista-by-snmp.yaml  asterisk-by-http.yaml  brocade-fc-by-snmp.yaml  brocade-foundry-nonstackable-by-snmp.yaml  brocade-foundry-stackable-by-snmp.yaml  ceph-by-zabbix-agent-2.yaml  chassis-by-ipmi.yaml  cisco-catalyst-3750v2-24fs-by-snmp.yaml  cisco-ios-by-snmp.yaml  cisco-ios-prior-to-12-0-3-t-by-snmp.yaml  cisco-ios-versions-12-0-3-t-12-2-3-5-by-snmp.yaml  cisco-ucs-by-snmp.yaml  clickhouse-by-http.yaml  d-link-des-7200-by-snmp.yaml  d-link-des-dgs-switch-by-snmp.yaml  dell-force-s-series-by-snmp.yaml  dell-idrac-by-snmp.yaml  docker-by-zabbix-agent-2.yaml  elasticsearch-cluster-by-http.yaml  etcd-by-http.yaml  extreme-exos-by-snmp.yaml  freebsd-by-zabbix-agent.yaml  generic-java-jmx.yaml  gitlab-by-http.yaml  hadoop-by-http.yaml  haproxy-by-http.yaml  haproxy-by-zabbix-agent.yaml  hashicorp-vault-by-http.yaml  hikvision-camera-by-http.yaml  hp-comware-hh3c-by-snmp.yaml  hp-enterprise-switch-by-snmp.yaml  (+73 more)
docs/: blog-post-devto.md  demo.sh
scripts/: README.md  check_apache.py  check_docker.py  check_elasticsearch.py  check_haproxy.py  check_jvm_jolokia.py  check_k8s_node.py  check_mongodb.py  check_mysql.py  check_nginx.py  check_postgresql.py  check_rabbitmq.py  check_redis.py  check_ssl.py  getS3Storage.py  verify_check_values.py
tests/: conftest.py  test_commands.py  test_diff_engine.py  test_e2e.py  test_models.py
zbx/: __init__.py  agent_deployer.py  cli.py  config_loader.py  deployer.py  diff_engine.py  formatter.py  models.py  plan_serializer.py  zabbix_client.py
zbx/checks/apache-httpd/: check.yaml
zbx/checks/docker/: check.yaml
zbx/checks/elasticsearch/: check.yaml
zbx/checks/jvm-jolokia/: check.yaml
zbx/checks/mysql/: check.yaml
zbx/checks/nginx/: check.yaml
zbx/checks/postgresql/: check.yaml
zbx/checks/s3-monitoring/: README.md  check.yaml
zbx/checks/ssl-cert/: check.yaml
zbx/checks/system-health/: check.yaml
zbx/commands/: __init__.py  agent.py  apply.py  check.py  diff.py  export.py  host.py  hostgroup.py  init.py  inventory.py  macro.py  plan.py  scaffold.py  schema.py  status.py  validate.py
(+1 files in other folders)
