[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zbx"
version = "0.1.0"
description = "Zabbix configuration as code — manage monitoring via Git"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["zabbix", "monitoring", "infrastructure-as-code", "devops"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "typer[all]>=0.12",
    "requests>=2.31",
    "pydantic>=2.5",
    "pyyaml>=6.0",
    "rich>=13.7",
    "python-dotenv>=1.0",
    "paramiko>=3.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "responses>=0.25",
    "mypy>=1.8",
    "ruff>=0.3",
]

[project.scripts]
zbx = "zbx.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["zbx*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
